--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -2,20 +2,36 @@
 
 <head>
     <title>System Monitoring</title>
-    <meta http-equiv="refresh" content="3">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/styles.css') }}">
+    <meta http-equiv="refresh" content="1">
 </head>
 
 
 <body>
     <h1>System Monitor</h1>
-    <h3>{% for item in data %}</h3>
-    <h3>Statistic ID: {{item[0]}}</h3>
-    <h3>Uptime: {{item[1]}}</h3>
-    <h3>Hostname: {{item[2]}}</h3>
-    <h3>IP Address: {{item[3]}}</h3>
-    <h3>{% endfor %}</h3>
-</body>
-
-<script src="script.js"></script>
-
+    <table>
+        <h3>{% for item in data %}</h3>
+        <tr>
+          <th>Hostname</th>
+          <th>IP Address</th>
+          <th>OS</th>
+          <th>Uptime</th>
+          <th>CPU load</th>
+          <th>Disk Usage</th>
+          <th>Temperature</th>
+          <th>RAM Usage</th>
+        </tr>
+        <tr>
+          <td>{{item[2]}}</td>
+          <td>{{item[3]}}</td>
+          <td></td>
+          <td>{{item[1]}}</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <h3>{% endfor %}</h3>
+      </table>
+    </body>
 </html>
