--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -27,19 +27,20 @@
           </tr>
         </thead>
         <tbody>
-          {% for item in machine %}
-          {% for elem in uptime %}
-          {% for x in user %}
+          {% for user in id %}
+            {% for item in machine %}
+              {% for elem in uptime %}
+          
           <tr>
-            <th scope="row">{{x}}</th>
+            <th scope="row">{{ user }}</th>
             <td>{{item}}</td>
             <td>{{elem}}</td>
             <td>x</td>
             <td>x</td>
             <td>x</td>
           </tr>
-          {% endfor %}
-          {% endfor %}
+              {% endfor %}
+            {% endfor %}
           {% endfor %}
         </tbody>
       </table>
