--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -31,7 +31,7 @@
             {% for item in machine %}
               {% for elem in uptime %}
           <tr>
-            <th scope="row">{{who}}</th>
+            <td>{{who}}</td>
             <td>{{item}}</td>
             <td>{{elem}}</td>
             <td>x</td>
