--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -39,11 +39,14 @@
         {% endfor %}
       </table>
     </div>
-  
-    <button class="logs">Logs</button>
-    <br>
-    <br>
-    <button class="logs">Logs</button>
-
+    <div class="alert alert-primary" role="alert">
+      Version 1.1 rolled out! - <a href="#" class="alert-link">check</a>
+    </div>
+    <div class="alert alert-danger" role="alert">
+      1 warning detected - <a href="#" class="alert-link">check it out</a>
+    </div>
+    <div class="alert alert-warning" role="alert">
+     Failed startup script at 192.168.22.1 - <a href="#" class="alert-link">check it out</a>
+    </div>
 </body>
 </html>
