--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="head">
-        <h2>Qebbi System Information Dashboard</h2>
+        <h3>Qebbi System Information Dashboard</h3>
         <hr>
     </div>  
 
@@ -24,7 +24,9 @@
             <th scope="col">Uptime</th>
             <th scope="col">CPU load (%)</th>
             <th scope="col">RAM usage (%)</th>
-            <th scope="col">DISK usage</th>
+            <th scope="col">DISK space (available)</th>
+            <th scope="col">Processes</th>
+            <th scope="col">Threads</th>
           </tr>
         </thead>
           <tbody>
