--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -13,6 +13,12 @@
     <div class="head">
         <h3>Qebbi System Information Dashboard</h3>
         <hr>
+        <button type="button" class="btn btn-danger">
+          Total warnings <span class="badge badge-light">4</span>
+        </button>
+        <button type="button" class="btn btn-primary">
+          Logs <span class="badge badge-light">2</span>
+        </button>
     </div>  
 
     <div class="info">
