--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -41,7 +41,7 @@
             <td><span class="badge badge-primary">{{id}}</span></td>
             {% for elem in data[id] %}
               {% for key, value in elem.items() %}
-            <td><span class="badge badge-success">{{value}}</span></td>
+            <td><span class="badge badge-info">{{value}}</span></td>
               {% endfor %}
             {% endfor %}
           </tr> 
