--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -33,6 +33,7 @@
             <th scope="col">DISK space (available)</th>
             <th scope="col">Processes</th>
             <th scope="col">Threads</th>
+            <th scope="col">IP</th>
           </tr>
         </thead>
           <tbody>
